[gd_scene load_steps=15 format=3 uid="uid://rddnwt4tkwm5"]

[ext_resource type="Script" uid="uid://dvt6ilb1qkbjh" path="res://scenes/game_scene/game_ui.gd" id="1_8qp3c"]
[ext_resource type="Script" uid="uid://cyh0d64pfygbl" path="res://addons/maaacks_game_template/base/scripts/pause_menu_controller.gd" id="1_onvsj"]
[ext_resource type="PackedScene" uid="uid://cy2ibddixp1ae" path="res://scenes/overlaid_menus/pause_menu.tscn" id="2_8qp3c"]
[ext_resource type="PackedScene" uid="uid://rv0h8s1dp5nx" path="res://scenes/base_level/exit_confirmation_screen.tscn" id="2_bmy5n"]
[ext_resource type="Script" uid="uid://crbo2e4ndbyvk" path="res://addons/maaacks_game_template/extras/scripts/level_list_loader.gd" id="3_bmy5n"]
[ext_resource type="PackedScene" uid="uid://bkcsjsk2ciff" path="res://addons/maaacks_game_template/base/scenes/music_players/background_music_player.tscn" id="4_7aihr"]
[ext_resource type="PackedScene" uid="uid://2dk6n1jwpy3b" path="res://scenes/loading_screen/level_loading_screen.tscn" id="5_3re04"]
[ext_resource type="Script" uid="uid://c0l40mp8j7w5p" path="res://scenes/game_scene/configurable_sub_viewport.gd" id="6_ascoc"]
[ext_resource type="Script" uid="uid://bj8vebocyavyu" path="res://scripts/level_list_state_manager.gd" id="7_wr4n6"]
[ext_resource type="PackedScene" uid="uid://b4sugr4uluc2r" path="res://scenes/overlaid_menus/game_won_menu.tscn" id="8_ukb12"]
[ext_resource type="PackedScene" uid="uid://dtunxe7ar60tw" path="res://scenes/overlaid_menus/level_lost_menu.tscn" id="9_i7m4m"]
[ext_resource type="PackedScene" uid="uid://cu5m2ttoqfqf" path="res://scenes/overlaid_menus/level_won_menu.tscn" id="10_rkfhe"]
[ext_resource type="PackedScene" uid="uid://3l3ir8fl822c" path="res://scenes/game_scene/score_ui.tscn" id="13_7aihr"]
[ext_resource type="PackedScene" uid="uid://dhtsd642kb644" path="res://scenes/game_scene/health_ui.tscn" id="14_3re04"]

[node name="GameUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_8qp3c")
exit_confirmation_screen = ExtResource("2_bmy5n")

[node name="PauseMenuController" type="Node" parent="." node_paths=PackedStringArray("focused_viewport")]
script = ExtResource("1_onvsj")
pause_menu_packed = ExtResource("2_8qp3c")
focused_viewport = NodePath("../ViewportContainer/ConfigurableSubViewport")

[node name="LevelLoader" type="Node" parent="." node_paths=PackedStringArray("level_container")]
script = ExtResource("3_bmy5n")
level_container = NodePath("../ViewportContainer/ConfigurableSubViewport")
files = Array[String](["res://scenes/base_level/levels/level_1.tscn"])
directory = "res://scenes/base_level/levels"

[node name="BackgroundMusicPlayer" parent="." instance=ExtResource("4_7aihr")]
bus = &"Master"

[node name="LevelLoadingScreen" parent="." instance=ExtResource("5_3re04")]
visible = false

[node name="ViewportContainer" type="SubViewportContainer" parent="."]
texture_filter = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
stretch = true

[node name="ConfigurableSubViewport" type="SubViewport" parent="ViewportContainer"]
handle_input_locally = false
audio_listener_enable_2d = true
audio_listener_enable_3d = true
size = Vector2i(1280, 720)
size_2d_override_stretch = true
render_target_update_mode = 4
script = ExtResource("6_ascoc")

[node name="LevelListManager" type="Node" parent="." node_paths=PackedStringArray("level_list_loader", "level_loading_screen")]
script = ExtResource("7_wr4n6")
level_list_loader = NodePath("../LevelLoader")
main_menu_scene = "res://scenes/menus/main_menu/main_menu_with_animations.tscn"
ending_scene = "res://scenes/end_credits/end_credits.tscn"
level_loading_screen = NodePath("../LevelLoadingScreen")
game_won_scene = ExtResource("8_ukb12")
level_lost_scene = ExtResource("9_i7m4m")
level_won_scene = ExtResource("10_rkfhe")

[node name="Control" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="ScoreUI" parent="Control" instance=ExtResource("13_7aihr")]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -104.0
offset_top = 32.0
offset_right = -30.0
offset_bottom = 72.0
grow_horizontal = 0
mouse_filter = 2

[node name="HealthUI" parent="Control" instance=ExtResource("14_3re04")]
unique_name_in_owner = true
layout_mode = 0
offset_left = 30.0
offset_top = 31.0
offset_right = 70.0
offset_bottom = 71.0
